Fixed huge section-gap problem

--- a/css/style.css
+++ b/css/style.css
@@ -2055,7 +2055,6 @@ button:focus {
 
 .donate_area{
   width: 100%;
-  height: 800px;
   margin-top: 50px;
   margin-bottom: 50px;
 }
